--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ dist
 dist-ssr
 *.local
 .env
-./src/services/supabase.js
+src/services/supabase.js
 # Editor directories and files
 .idea
 .vscode/*
