--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite": "5.0.5",
+    "vite-plugin-eslint": "^1.8.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
