--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
-    "@tanstack/react-query": "^5.15.0",
+    "@tanstack/react-query": "^5.27.3",
+    "@tanstack/react-query-devtools": "^5.8.3",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,9 +32,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "5.2.0-beta.0",
+    "vite": "5.0.5",
     "vite-plugin-eslint": "^1.8.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@tanstack/react-query-devtools": "^5.8.3"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
